# relay-trader

./: .gitignore
backend/: .railwayignore  =1.10.0  Procfile  init_db.py  pyproject.toml  railway.json  requirements.txt  run_migration.py  test_buyhold.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_auth_models.py
backend/data/: AAPL.csv  AAPL_3000bars.csv  AVGO_20090805-20251222.csv  AVGO_20250819-20251127.csv  BAC_20241217-20251217.csv  GOOGL_20241210-20251209.csv  NVDA_19990121-20251210.csv  RKLB_20201123-20251218.csv  SPY_20241210-20251208.csv  SPY_20241210-20251209.csv  downloads_manifest.json  randomwalk-OHLCV.py  relaytrader.db  runs.json
backend/data/.yf-cache/: cookies.db  tkr-tz.db  tkr-tz.db-shm  tkr-tz.db-wal
backend/data/users/2/: AMZN_20210103-20260101.csv  SPY_20250102-20260101.csv  (+1 more)
backend/examples/: mean_reversion.py
backend/relaytrader/: __init__.py  cli.py
backend/relaytrader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/relaytrader/api/: deps.py  main.py  security.py
backend/relaytrader/core/: annotations.py  backtest.py  broker.py  data.py  manual_simulator.py  metrics.py  options_pricing.py  strategy.py  types.py
backend/relaytrader/data/: __init__.py  downloader.py
backend/relaytrader/db/: __init__.py  database.py  models.py
backend/relaytrader/reporting/: html_report.py
backend/relaytrader/strategies/: __init__.py  builtin.py
backend/reports/: report_AAPL_20251119_005743.html
backend/tests/: test_backtest_engine.py  test_broker.py  test_data_validation.py  test_metrics.py
(+36 files in other folders)
